# maze-game

.github/workflows/: build.yml
maze-game/: Cargo.toml  player_progress.jsonl
maze-game/src/: main.rs
maze-game/src/game/: assets.rs
maze-game/src/game/ui/: layout.rs  mod.rs  theme.rs
maze-game/src/maze/: mazedataaccess.rs
maze_game/: Cargo.toml  build.rs  maze_game  maze_game.d
maze_game/src/: main.rs
maze_game/src/game/: account_management.rs  mod.rs  mode.rs  player.rs  progress.rs  render.rs  story.rs  world_render.rs
maze_game/src/game/screens/: credits_ui.rs  mod.rs  overlays_ui.rs  records_ui.rs  startup_ui.rs
maze_game/src/game/ui/: components.rs
maze_game/src/maze/: generate.rs  generate_prim.rs  layout.rs  mod.rs  solvability.rs
